<resources>
    <string name="app_name">tests de fisioterapia</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="waiting_for_text">...</string>

    <string name="username_title">Usuario</string>
    <string name="password_title">Contraseña</string>
    <string name="forgot_pass_btn_text">Olvidé mi contraseña</string>
    <string name="powered_btn_text">powered by CIME-FICA</string>
    <string name="description_imagen_login">Account icon</string>
    <string name="description_imagen_fisio_logo">Fisioterapia UTN</string>
    <string name="text_login_button">INGRESAR</string>
    <string name="username_hint">estudiante@utn.edu.ec</string>
    <string name="password_hint">********</string>
    <string name="img_description_patient">Foto de paciente</string>
    <string name="img_description_user">Foto de usuario</string>
    <string name="section_title_main">titulo de sección</string>
    <string name="edited_example_text">10-11-19</string>
    <string name="patient_name_example_text">Paciente</string>
    <string name="arrow_btn_description">boton arrow para desplegar menu</string>
    <string name="name_user_example">usuario</string>
    <string name="img_btn_options_description">icono para opciones del usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imporntarnt_comments_info_patients_text">Agregar comentarios importantes sobre este paciente</string>

    <string name="user_option_logout">Cerrar Sesión</string>
    <string name="tv_register_info">Registrate usando tu correo institucional de la Universidad Técnica del Norte. Pero si no tienes correo puedes probar la app con el correo: invitado@utn.edu.ec y la contraseña: UTNcimeFICA</string>
    <string name="btn_register_txt">REGISTRARME</string>
    <string name="btn_new_user_login">Soy nuevo aquí</string>
    <string name="btn_recover_password">recuperar</string>
    <string name="forgot_password_text">Te enviaremos un correo a este email para que escribas una nueva contraseña</string>
    <string name="test_result_ruffier_dickson_others_text">RESULTADO 0: Corazón de atleta.
        <br>RESULTADO 0,1 a 5: Corazón suficientemente apto para actividades físicas. </br>
        <br>RESULTADO 5,1 a 10: Corazón medio, debería realizar un plan para recuperar el estado físico adecuado.</br>
        <br>RESULTADO 10,1 a 15: Corazón medio, hacer una visita a un profesional de la salud. </br>
        <br>RESULTADO más de 15: es un índice que revela mal estado o un corazón débil</br>
        </string>
    <string name="test_indications">Te indicaremos qué debes hacer a continuación al empezar el test.</string>
    <string name="btn_text_empezar">EMPEZAR</string>
</resources>