<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/user_activity_background"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_login_account"
                android:layout_width="@dimen/iv_width_login"
                android:layout_height="@dimen/iv_height_login"
                android:layout_marginTop="@dimen/iv_margin_top_login"
                android:src="@drawable/login_account_picture"
                app:layout_constraintEnd_toEndOf="@+id/et_login_username"
                app:layout_constraintStart_toStartOf="@+id/et_login_username"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description_imagen_login" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_margin_top_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/iv_login_account"
                app:layout_constraintStart_toStartOf="@+id/iv_login_account"
                app:layout_constraintTop_toBottomOf="@id/btn_powered"
                app:srcCompat="@drawable/fisioterapia_logo_utn"
                android:contentDescription="@string/description_imagen_fisio_logo" />
            <TextView
                android:id="@+id/tv_login_username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_start_login"
                android:layout_marginBottom="@dimen/text_margin_bottom_login"
                android:fontFamily="monospace"
                android:text="@string/username_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_titles_login"
                app:layout_constraintBottom_toBottomOf="@+id/et_login_username"
                app:layout_constraintStart_toStartOf="@+id/et_login_username" />
            <EditText
                android:id="@+id/et_login_username"
                android:hint="@string/username_hint"
                android:layout_width="@dimen/et_width_login"
                android:layout_height="@dimen/et_height_login"
                android:layout_marginTop="@dimen/_margin_top_login"
                android:background="@drawable/login_user_box"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="@color/white"
                android:textSize="@dimen/et_text_size_login"
                android:paddingTop="@dimen/et_padding_top_login"
                android:paddingStart="@dimen/et_padding_start_login"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_login_account"
                android:autofillHints="" />
            <TextView
                android:id="@+id/tv_login_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin_start_login"
                android:layout_marginBottom="@dimen/text_margin_bottom_login"
                android:fontFamily="monospace"
                android:text="@string/password_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_titles_login"
                app:layout_constraintBottom_toBottomOf="@+id/et_login_password"
                app:layout_constraintStart_toStartOf="@+id/et_login_password" />
            <EditText
                android:id="@+id/et_login_password"
                android:hint="@string/password_hint"
                android:layout_width="@dimen/et_width_login"
                android:layout_height="@dimen/et_height_login"
                android:layout_marginTop="@dimen/_margin_top_login"
                android:background="@drawable/login_pass_box"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/et_text_size_login"
                android:paddingTop="@dimen/et_padding_top_login"
                android:paddingStart="@dimen/et_padding_start_login"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="@+id/et_login_username"
                app:layout_constraintStart_toStartOf="@+id/et_login_username"
                app:layout_constraintTop_toBottomOf="@+id/et_login_username"
                android:autofillHints="" />
            <Button
                android:id="@+id/btn_login_ingresar"
                android:layout_width="198dp"
                android:layout_height="63dp"
                android:layout_marginTop="@dimen/_margin_top_login"
                android:background="@drawable/boton_ingresar"
                android:text="@string/text_login_button"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size_login"
                app:layout_constraintEnd_toEndOf="@+id/et_login_password"
                app:layout_constraintStart_toStartOf="@+id/et_login_password"
                app:layout_constraintTop_toBottomOf="@+id/et_login_password" />
            <Button
                android:id="@+id/btn_login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_pass_btn_text"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size_forgot_pass_login"
                style="?android:attr/buttonBarButtonStyle"
                app:layout_constraintEnd_toEndOf="@+id/btn_login_ingresar"
                app:layout_constraintStart_toStartOf="@+id/btn_login_ingresar"
                app:layout_constraintTop_toBottomOf="@+id/btn_login_ingresar" />
            <Button
                android:id="@+id/btn_powered"
                android:layout_width="@dimen/btn_powered_width_login"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/powered_btn_text"
                android:textColor="@color/powered_text"
                android:textSize="@dimen/btn_text_size_powered_login"
                android:textStyle="bold"
                android:textAlignment="center"
                style="?android:attr/buttonBarButtonStyle"
                app:layout_constraintEnd_toEndOf="@+id/btn_login_ingresar"
                app:layout_constraintStart_toStartOf="@+id/btn_login_ingresar"
                app:layout_constraintTop_toBottomOf="@+id/btn_login_forgot_password" />




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>