<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/user_activity_background"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
     >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/data_user_box_shape_background">
        <ImageView
            android:id="@+id/img_user"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/img_description_user"
            android:src="@drawable/login_account_picture" />
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_weight="3"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:text="@string/name_user_example" />
        <ImageButton
            android:id="@+id/btn_img_options"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/img_btn_options_description"
            app:srcCompat="@drawable/option_to_users" />
    </LinearLayout>
    <ImageView
        android:id="@+id/img_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:contentDescription="@string/section_title_main"
        app:srcCompat="@drawable/iv_text_pacientes" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/view_loading_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="invisible"
            android:alpha="0.5"/>
        <ProgressBar
            android:id="@+id/progress_loading_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerInParent="true"/>

        <ScrollView
            android:id="@+id/sv_rv_show"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_patients_show"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>