<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/user_activity_background"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".UI.activities.MainActivity">

        <ImageView
            android:id="@+id/iv_login_account"
            android:layout_width="@dimen/iv_width_login"
            android:layout_height="@dimen/iv_height_login"
            android:layout_marginTop="@dimen/_margin_top_login"
            android:src="@drawable/login_account_picture"
            app:layout_constraintEnd_toEndOf="@+id/et_email_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/et_email_forgot_password"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/img_description_user"/>
        <TextView
            android:id="@+id/tv_login_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="@dimen/text_margin_bottom_login"
            android:fontFamily="monospace"
            android:text="Correo"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_titles_login"
            app:layout_constraintBottom_toBottomOf="@+id/et_email_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/et_email_forgot_password" />
        <EditText
            android:id="@+id/et_email_forgot_password"
            android:hint="@string/username_hint"
            android:layout_width="@dimen/et_width_login"
            android:layout_height="@dimen/et_height_login"
            android:layout_marginTop="@dimen/_margin_top_login"
            android:background="@drawable/login_user_box"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textSize="@dimen/et_text_login"
            android:paddingTop="@dimen/et_padding_top_login"
            android:paddingStart="@dimen/et_padding_start_login"
            android:paddingEnd="@dimen/et_padding_start_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_account"
            android:autofillHints="" />
        <Button
            android:id="@+id/btn_recover_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_recover_password"
            android:textColor="@color/white"
            android:onClick="btn_recover_password"
            android:textSize="30sp"
            android:background="@drawable/boton_ingresar"
            android:layout_marginTop="@dimen/_margin_top_login"
            app:layout_constraintEnd_toEndOf="@+id/et_email_forgot_password"
            app:layout_constraintStart_toStartOf="@+id/et_email_forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/et_email_forgot_password" />
        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:text="@string/forgot_password_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_recover_password"
            app:layout_constraintStart_toStartOf="@+id/btn_recover_password"
            app:layout_constraintTop_toBottomOf="@+id/btn_recover_password" />
        <Button
            android:id="@+id/btn_login_powered"
            android:layout_width="@dimen/btn_powered_width_login"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/powered_btn_text"
            android:textColor="@color/powered_text"
            android:textSize="@dimen/btn_text_powered_login"
            android:onClick="btn_powered_action_rp"
            android:textAlignment="center"
            style="?android:attr/buttonBarButtonStyle"
            app:layout_constraintEnd_toEndOf="@+id/btn_recover_password"
            app:layout_constraintStart_toStartOf="@+id/btn_recover_password"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>