<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_activity_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_title_test_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiting_for_text"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_intro_test"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/tv_resume_test_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/waiting_for_text"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/iv_test_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/test_img_intro_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_resume_test_intro" />
            <TextView
                android:id="@+id/tv_title_method_test_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:text="METODO:"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/iv_test_intro"
                />
            <TextView
                android:id="@+id/tv_method_test_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/waiting_for_text"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_method_test_intro"
                />
            <TextView
                android:id="@+id/tv_comment_test_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/test_indications"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@color/coments"
                app:layout_constraintTop_toBottomOf="@+id/tv_method_test_intro"
                />
            <Button
                android:id="@+id/btn_empezar_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_empezar"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:background="@drawable/nuevo_test_boton_text"
                android:onClick="btn_test_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_comment_test_intro" />
            <ProgressBar
                android:id="@+id/pb_searching_intro_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_comment_test_intro"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_empezar_test"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout
            android:id="@+id/fragment_test_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>


</ScrollView>
